# Rosebud

./: LICENSE.md  README.md
VexRiscv/: Makefile
c_code/: Makefile  basic_corundum_fw.c  basic_fw.c  basic_fw2.c  basic_fw_both.c  basic_fw_both.map  basic_fw_clip_hash.c  basic_fw_hash.c  basic_fw_hash.map  basic_fw_n_bc.c  basic_fw_re_multi.c  basic_pkt_gen.c  basic_pkt_gen.map  bc_test.c  bc_test2.c  core.h  core2.h  core3.h  default.asm  default.c  default.hex  dram_test.c  dram_test2.c  dram_test3.c  drop.c  dummy_ack_pkt_gen.c  hash_test.c  hash_test.map  int_handler.c  int_handler2.c  inter_core.c  interrupt_test.c  latency.c  link_option.ld  link_option_full.ld  loopback.c  old_test.c  packet_headers.h  pkt_gen.c  pkt_gen.map  (+17 more)
c_code/ExaNIC_X10/: basic_fw.c
fpga_src/: .gitignore  Makefile  axis_async_fifo.tcl  fpga.xdc  fpga_utilization_placed.rpt
fpga_src/VexRiscv/: Makefile
fpga_src/accel/regex/generator/pipelineDSL/: .travis.yml  LICENSE  README.md  default.nix  pipeline.cabal  pipeline.nix
fpga_src/accel/regex/generator/pipelineDSL/examples/: example1.hs  example1.sv  fsm1.hs  module_example.hs  uart_demo.hs
fpga_src/accel/regex/generator/pipelineDSL/src/Hardware/PipelineDSL/: Debug.hs  FSM.hs  HW.hs  Module.hs  Pipeline.hs  Verilog.hs
fpga_src/common/: vivado.mk
host_utils/: README.md
riscv_code/: Makefile  README.md  basic_corundum_fw.c  basic_corundum_tb.c  basic_fw.c  basic_fw_n_bc.c  basic_pkt_gen.c  basic_pkt_gen.map  bc_waterfall.c  cor_test.c  core.h  dram_test.c  drop.c  hex_gen.py  int_handler.c  inter_core.c  latency.c  len_check.c  link_option.ld  loopback.c  packet_headers.h  pkt_gen.c  pkt_gen.map  riscv_encoding.h  rx_bw.c  table_gen.py  timer_test.c
(+1206 files in other folders)
